@@ -353,6 +353,9 @@ Bug Fixes
 
 * SOLR-6779: fix /browse for schemaless example (ehatcher)
 
+* SOLR-6874: There is a race around SocketProxy binding to it's port the way we setup 
+  JettySolrRunner and SocketProxy. (Mark Miller, Timothy Potter)
+
 * SOLR-6735: Make CloneFieldUpdateProcessorFactory null safe (Steve Davids via ehatcher)
 
 * SOLR-6907: URLEncode documents directory in MorphlineMapperTest to handle spaces etc.
